# cortical-magnification

./: LICENSE  README.md  pyproject.toml
notebooks/: general-cmag.ipynb
notes/: math.md
src/: README.md
src/cmag/: __init__.py  fitting.py  hh91.py  models.py
src/cmag/hcp/: __init__.py  config.py  data.py
