[project]
name = "cmag"
version = "0.1.0"
description = """A library for calculating cortical magnification."""
authors = [{name="Noah C. Benson", email="nben@uw.edu"},
           {name="Linda Zhao", email="zz3130@nyu.edu"}]
license = {"text"="MIT"}
readme = "README.md"
requires-python = ">=3.8"
keywords = ["neuroscience", "vision", "models"]
classifiers = [
    'Intended Audience :: Science/Research',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Topic :: Scientific/Engineering',
    'Topic :: Scientific/Engineering :: Information Analysis',
    'Operating System :: Microsoft :: Windows',
    'Operating System :: POSIX',
    'Operating System :: Unix',
    'Operating System :: MacOS']
dependencies = [
     'numpy >= 1.24.0',
     'scipy >= 1.7.0',
     'torch >= 2.2.0',
     'matplotlib >= 3.9.0',
     'neuropythy >= 0.12.16']

[project.urls]
homepage = "https://github.com/noahbenson/cortical-magnification"
documentation = "https://github.com/noahbenson/cortical-magnification"
repository = "https://github.com/noahbenson/cortical-magnification"
